Updated in sync with official repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-template/isc_report.pdf
-template/isc_template_report.pdf
-template/isc_template_shared.pdf
-acronyms.pdf
+isc_template_report.pdf
+template/report.pdf
