--- a/typst.toml
+++ b/typst.toml
@@ -6,7 +6,7 @@ entrypoint = "isc_template_report.typ"
 repository = "https://github.com/ISC-HEI/ISC-report"
 authors = ["Pierre-andré Mudry"]
 license = "MIT"
-description = "A report template for the ISC programme in Sion at the School of Engineering"
+description = "An official report template for the ISC bachelor degree programme in Sion, at the School of Engineering"
 keywords = ["report", "university", "HES-SO Valais", "Sion", "Sitten", "HEI"]
 categories = ["report"]
 disciplines = ["computer-science", "engineering"]
