--- a/typst.toml
+++ b/typst.toml
@@ -1,10 +1,10 @@
 [package]
 name = "isc-hei-report"
-version = "0.1.0"
+version = "0.1.3"
 compiler = "0.11.0"
 entrypoint = "isc_template_report.typ"
 repository = "https://github.com/ISC-HEI/ISC-report"
-authors = ["Pierre-andré Mudry"]
+authors = ["Pierre-André Mudry"]
 license = "MIT"
 description = "An official report template for the 'Informatique et systèmes de communication' (ISC) bachelor degree programme at the School of Engineering (HEI) in Sion, Switzerland."
 keywords = ["report", "ISC", "university", "Informatique et systèmes de communication", "HES-SO Valais", "Sion", "HEI", "School of engineering"]
