Article citing in report example, fixing #21 Downloading of local fonts rewrite

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,12 @@ isc_template_report.pdf
 template/report.pdf
 test
 template/acronyms.pdf
+
+template/fonts/modern-isc-fonts
+
+# Ignore macOS system files
 .DS_Store
+.AppleDouble
+.Spotlight-V100
+.Trashes
+._*
