--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 isc_template_report.pdf
-template/report.pdf
+src/report.pdf
+src/acronyms.pdf
+src/bachelor_thesis.pdf
+src/fonts/modern-isc-fonts
+lib/**/*.pdf
 test
-template/acronyms.pdf
-template/fonts/modern-isc-fonts
-
-lib
 
 # Ignore macOS system files
 .DS_Store
