--- a/typst.toml
+++ b/typst.toml
@@ -1,17 +1,17 @@
 [package]
-name = "isc-hei-report"
-version = "0.3.1"
+name = "isc-hei-bthesis"
+version = "0.5.0"
 compiler = "0.13.1"
 entrypoint = "isc_templates.typ"
 repository = "https://github.com/ISC-HEI/ISC-report"
 authors = ["Pierre-André Mudry"]
 license = "MIT"
-description = "An official report template for the 'Informatique et systèmes de communication' (ISC) bachelor degree programme at the School of Engineering (HEI) in Sion, Switzerland."
-keywords = ["report", "ISC", "thesis", "university", "Informatique et systèmes de communication", "HES-SO Valais", "Sion", "HEI", "School of engineering"]
-categories = ["report"]
+description = "An official bachelor thesis template for the 'Informatique et systèmes de communication' (ISC) bachelor degree programme at the School of Engineering (HEI) in Sion, Switzerland."
+keywords = ["ISC", "thesis", "university", "Informatique et systèmes de communication", "HES-SO Valais", "Sion", "HEI", "School of engineering"]
+categories = ["thesis"]
 disciplines = ["computer-science", "engineering"]
 
 [template]
 path = "src"
-entrypoint = "report.typ"
+entrypoint = "bachelor_thesis.typ"
 thumbnail = "thumbnail.png"
