--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ src/acronyms.pdf
 src/bachelor_thesis.pdf
 src/fonts/modern-isc-fonts
 lib/**/*.pdf
+scripts/tmp
 test
 
 # Ignore macOS system files
