--- a/templates/bachelor-thesis/typst.toml
+++ b/templates/bachelor-thesis/typst.toml
@@ -6,7 +6,7 @@ entrypoint = "isc_templates.typ"
 repository = "https://github.com/ISC-HEI/ISC-report"
 authors = ["Pierre-André Mudry"]
 license = "MIT"
-description = "An official bachelor thesis template for the 'Informatique et systèmes de communication' (ISC) bachelor degree programme at the School of Engineering (HEI) in Sion, Switzerland."
+description = "Official bachelor thesis at the 'Informatique et systèmes de communication' (ISC) bachelor degree programme at the School of Engineering (HEI) in Sion, Switzerland."
 keywords = ["ISC", "thesis", "university", "Informatique et systèmes de communication", "HES-SO Valais", "Sion", "HEI", "School of engineering"]
 categories = ["thesis"]
 disciplines = ["computer-science", "engineering"]
