--- a/typst.toml
+++ b/typst.toml
@@ -1,17 +1,17 @@
 [package]
-name = "isc-hei-bthesis"
+name = "isc-hei-exec-summary"
 version = "0.5.2"
 compiler = "0.13.1"
 entrypoint = "isc_templates.typ"
-repository = "https://github.com/ISC-HEI/isc-hei-student-templates"
+repository = "https://github.com/ISC-HEI/ISC-report"
 authors = ["Pierre-André Mudry"]
 license = "MIT"
-description = "Official bachelor thesis at the 'Informatique et systèmes de communication' (ISC) bachelor degree programme, School of Engineering (HEI) in Sion, Switzerland."
+description = "Official executive summary for the bachelor thesis at the 'Informatique et systèmes de communication' (ISC) bachelor degree programme, School of Engineering (HEI) in Sion, Switzerland."
 keywords = ["ISC", "thesis", "university", "Informatique et systèmes de communication", "HES-SO Valais", "Sion", "HEI", "School of engineering"]
 categories = ["thesis"]
 disciplines = ["computer-science", "engineering"]
 
 [template]
 path = "src"
-entrypoint = "bachelor_thesis.typ"
-thumbnail = "bachelor_thesis_thumb.png"
+entrypoint = "exec_summary.typ"
+thumbnail = "exec_summary.png"
