--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ isc_template_report.pdf
 src/report.pdf
 src/acronyms.pdf
 src/bachelor_thesis.pdf
+src/exec_summary.pdf
 src/fonts/modern-isc-fonts
 lib/**/*.pdf
 scripts/tmp
