--- a/typst.toml
+++ b/typst.toml
@@ -3,7 +3,7 @@ name = "isc-hei-exec-summary"
 version = "0.5.2"
 compiler = "0.13.1"
 entrypoint = "isc_templates.typ"
-repository = "https://github.com/ISC-HEI/ISC-report"
+repository = "https://github.com/ISC-HEI/isc-hei-student-templates"
 authors = ["Pierre-André Mudry"]
 license = "MIT"
 description = "Official executive summary for the bachelor thesis at the 'Informatique et systèmes de communication' (ISC) bachelor degree programme, School of Engineering (HEI) in Sion, Switzerland."
